Added AngularJS. Added a few slides.

--- a/presentation.html
+++ b/presentation.html
@@ -13,12 +13,13 @@ CampusHash HTML Deck
   <!--<meta name="viewport" content="initial-scale=0.4">-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" media="all" href="theme/css/default.css">
-  <link rel="stylesheet" media="all" href="theme/css/app.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
   <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
+  <script src="js/angular.min.js"></script>
+  <link rel="stylesheet" href="theme/css/custom.css">
 </head>
-<body style="opacity: 0">
+<body style="opacity: 0" ng-app>
 
 <slides class="layout-widescreen">
 
@@ -45,7 +46,80 @@ CampusHash HTML Deck
       <h2></h2>
       <h3></h3>
     </hgroup>
-    <article class="flexbox vcenter"><p><img alt="" src="images/angularjs.svg" /></p></article>
+    <article class="flexbox vcenter"><p><img alt="" src="images/angularjs.svg" /></p>
+<p><strong><em>Superheroic</em> JavaScript MVC. HTML <em>enhanced</em> for web apps!</strong></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2></h2>
+      <h3></h3>
+    </hgroup>
+    <article class="flexbox vcenter"><p><img alt="" src="images/mvc.png" /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2></h2>
+      <h3></h3>
+    </hgroup>
+    <article class="flexbox vcenter"><p><img alt="" src="images/mvc-processes.png" /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>Traditional 'websites'</h2>
+      <h3></h3>
+    </hgroup>
+    <article class="flexbox vcenter"><p><img alt="" src="images/normalapp.png" /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>Modern webapps</h2>
+      <h3></h3>
+    </hgroup>
+    <article class="flexbox vcenter"><p><img alt="" src="images/modernapp.png" /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>What the AngularJS?</h2>
+      <h3>Or, what superpowers?</h3>
+    </hgroup>
+    <article ><ul>
+<li>
+<p><strong>Templating</strong> : HTML with additional markup</p>
+</li>
+<li>
+<p><strong>Model</strong> : The data that the user interacts with</p>
+</li>
+<li>
+<p><strong>Scope</strong> : Context where the model is stored</p>
+</li>
+<li>
+<p><strong>View</strong> : What the user sees, i. e. the DOM</p>
+</li>
+<li>
+<p><strong>Data Binding</strong> : Sync data between <em>model</em> and <em>view</em></p>
+</li>
+<li>
+<p><strong>Controllers</strong> : The business logic behind views</p>
+</li>
+<li>
+<p><strong>Service</strong> : Reusable business logic, independent of views</p>
+</li>
+</ul></article>
  
 </slide>
 
