--- a/_base.html
+++ b/_base.html
@@ -13,12 +13,13 @@ CampusHash HTML Deck
   <!--<meta name="viewport" content="initial-scale=0.4">-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" media="all" href="theme/css/default.css">
-  <link rel="stylesheet" media="all" href="theme/css/app.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
   <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
+  <script src="js/angular.min.js"></script>
+  <link rel="stylesheet" href="theme/css/custom.css">
 </head>
-<body style="opacity: 0">
+<body style="opacity: 0" ng-app>
 
 <slides class="layout-widescreen">
 
